--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -111,7 +111,7 @@ section: Components
     }
   }
 
-  .c-menu__item-check {
+  .c-menu__item-icon {
     display: inline-block;
     width: 30px;
   }
