--- a/src/css/utilities/typography.css
+++ b/src/css/utilities/typography.css
@@ -52,6 +52,15 @@ section: Utilities
 .u-break-word { @apply --break-word; }
 
 
+.u-helper-text {
+  @apply --top;
+  font-size: var(--fontSize--tiny);
+  line-height: 1rem;
+  border-left: 2px solid var(--grey-200);
+  padding: 3px 0 1em 1rem;
+}
+
+
 .u-text-overlay {
   position: relative !important;
 
