--- a/src/css/components/badge.css
+++ b/src/css/components/badge.css
@@ -20,7 +20,7 @@ section: Components
   --color-badge--default: var(--color-page);
   --borderRadius-badge: 50px;
   --marginRight-badge: 6px;
-  --padding-badge: 3px 8px;
+  --padding-badge: 3px 2px 3px 10px;
   --padding-badge--icon: 4px;
   --size-badge--small: 14px;
   --size-badge--icon: 30px;
@@ -29,7 +29,7 @@ section: Components
     color: var(--color-badge);
     display: inline-block;
     font-size: var(--fontSize--tiny);
-    line-height: 1;
+    line-height: 22px;
     max-width: 100%;
     outline: 0;
     padding: var(--padding-badge);
@@ -56,6 +56,8 @@ section: Components
     color: var(--color-button-alt--primary);
     margin-bottom: 3px;
   }
+
+  .c-icon:last-child { margin-left: 3px; }
 }
 
 .c-badge--small {
