--- a/src/css/components/field.css
+++ b/src/css/components/field.css
@@ -8,7 +8,8 @@ section: Components
   --borderColor-field--focus: var(--blue-400);
   --borderColor-field--invalid: var(--orange-500);
   --borderColor-field--error: var(--red-400);
-  --field-font-size: var(--fontSize--small);
+  --field-font-size: 16px;
+  --field-font-size--dense: 13px;
   --field-min-height: 30px;
 }
 
@@ -16,13 +17,15 @@ section: Components
   @apply --middle;
   background-color: transparent;
   border-bottom: solid var(--borderColor-field);
-  border-width: 0 0 2px;
+  border-width: 0 0 1px;
   border-radius: 0;
   color: var(--color-page);
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   font-family: inherit;
   font-size: var(--field-font-size);
-  margin: 0;
+  margin: .5em 0;
   min-height: var(--field-min-height); /* IE11 Input Height */
   padding: 2px 4px;
   transition: border var(--global-duration) ease-in-out;
@@ -31,32 +34,78 @@ section: Components
 
   &:focus,
   &.has-focus {
+    border-width: 0 0 2px;
     border-bottom-color: var(--borderColor-field--focus);
     outline: none;
   }
 
 
   &:focus:invalid,
-  &:focus.is-invalid { border-bottom-color: var(--borderColor-field--invalid); }
-
-
+  &:focus.is-invalid,
   &:invalid,
-  &.is-invalid { border-bottom-color: var(--borderColor-field--invalid); }
+  &.is-invalid {
+     border-width: 0 0 2px;
+     border-bottom-color: var(--borderColor-field--invalid);
+   }
 
 
-  &:focus.is-error { border-bottom-color: var(--borderColor-field--error); }
+  &:focus.is-error {
+     border-width: 0 0 2px;
+     border-bottom-color: var(--borderColor-field--error);
+   }
 
 
-  &.is-error { border-bottom-color: var(--color-negative); }
+  &.is-error {
+     border-width: 0 0 2px;
+     border-bottom-color: var(--color-negative);
+  }
+
+
+  &[disabled] {
+    border-width: 0 0 2px;
+    border-bottom-style: dotted;
+  }
 
 
   .c-button { margin-bottom: 0 !important; }
+
+  &[type="color"] {
+    appearance: none;
+    border-radius: 2px;
+    border: none;
+    height: 30px;
+  }
+
+  &[type="color"]::-webkit-color-swatch-wrapper {
+    border-radius: 2px;
+    box-shadow:
+      0 0 1px 1px var(--borderColor-field),
+      0 0 1px 1px var(--borderColor-field),
+      0 0 1px 1px var(--borderColor-field),
+      0 0 1px 1px var(--borderColor-field);
+    border: 1px solid var(--white);
+    padding: 0;
+  }
+
+  &[type="color"]:focus::-webkit-color-swatch-wrapper {
+     box-shadow:
+       0 0 1px 1px var(--borderColor-field--focus),
+       0 0 1px 1px var(--borderColor-field--focus),
+       0 0 1px 1px var(--borderColor-field--focus),
+       0 0 1px 1px var(--borderColor-field--focus);
+  }
+
+  &[type="color"]::-webkit-color-swatch {
+    border-radius: 3px;
+    border: none;
+  }
 }
 
 
   .c-field__input {
     border: none;
-    display: inline-block;
+    flex: 1 1 0%;
+    font-size: var(--field-font-size);
     margin-bottom: 0;
     width: auto;
   }
