Update menu.css for modal

--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -153,6 +153,7 @@ section: Components
        @apply --triangle;
        @apply --triangle-bottom;
        border-width: 5px 4px 0;
+       color: var(--grey-300);
        content: '';
        float: right;
        margin: 1em .5rem 1em .75rem;
@@ -161,4 +162,5 @@ section: Components
     }
   }
 }
+
 
