--- a/src/css/utilities/grid.css
+++ b/src/css/utilities/grid.css
@@ -11,7 +11,7 @@ section: Utilities
 
 .u-row { @apply --row; }
 .u-row--break { @apply --row-break; }
-.u-row--collapse > * { @apply --row-collapse; }
+.u-row--collapse > [class^="u-column"] { @apply --row-collapse; }
 .u-row--reverse { flex-direction: row-reverse; }
 .u-row--wide {
   @apply --row-wide;
