--- a/src/css/components/radio.css
+++ b/src/css/components/radio.css
@@ -89,7 +89,10 @@ section: Components
 
 
 .c-radio--expanded {
-  & + label { padding-left: 27px; }
+  & + label {
+    padding-left: 27px;
+    margin-right: .5em;
+  }
 }
 
 
