--- a/src/css/components/all.css
+++ b/src/css/components/all.css
@@ -40,6 +40,7 @@
 @import 'menu';
 @import 'message';
 @import 'notification';
+@import 'pagination';
 @import 'switch';
 @import 'table';
 @import 'tabs';
