--- a/src/css/components/button.css
+++ b/src/css/components/button.css
@@ -15,6 +15,8 @@ section: Components
   --opacity-button--disabled: .35;
   --transitionDuration-button: .1s;
 
+  --width-button--icon: 36px;
+
 
   --button--wide: {
     display: block;
@@ -227,7 +229,7 @@ section: Components
 
 .c-button--icon {
   color: var(--grey-700);
-  min-width: 36px;
+  min-width: var(--width-button--icon);
   padding: 0;
 
   &:hover { color: var(--grey-800); }
