--- a/src/css/components/tabs.css
+++ b/src/css/components/tabs.css
@@ -4,34 +4,54 @@ section: Components
 ---*/
 
 :root {
-  --tab-item-height: 43px;
+  --height-tab: 48px;
+  --fontSize-tab: 13px;
+  --color-tab--active: rgba(255, 255, 255, .1);
+  --borderColor-tab--hover: var(--color-accent);
+  --borderColor-tab--active: var(--color-accent);
+  --padding-tab: 12px;
+}
+
+.c-tabs {
+  @apply --row;
+
+  .c-toolbar__row:not(:first-child) & {
+
+    @media (--md-up) {
+      margin-left: calc(var(--width-button--icon) + var(--frame-quarter) + var(--frame-quarter) - var(--padding-tab)); /* Icon button combined width minus left padding of menu button */
+    }
+
+  }
 }
 
 
 .c-tab {
   background: transparent;
-  border-bottom: 3px solid transparent;
-  font-size: 13px;
-  padding: 16px 12px;
+  border-bottom: 2px solid transparent;
+  color: currentColor;
+  font-size: var(--fontSize-tab);
+  padding: 0 var(--padding-tab);
+  height: var(--height-tab);
   min-width: 72px;
   max-width: 264px;
+  opacity: .75;
   text-transform: uppercase;
-  transition: border-bottom var(--global-duration) ease, color var(--global-duration) ease;
+  transition: border var(--global-duration) ease, background-color var(--global-duration) ease;
 
+  &:hover { border-bottom-color: var(--borderColor-tab--hover); }
 
-  &:hover { border-bottom-color: var(--blue-400); }
-
-  &:--active {
-     background-color: transparent;
-     border-bottom-color: var(--blue-800);
-     box-shadow: none;
-     color: var(--blue-800);
-
-    :--fullscreen & {
-      border-bottom-color: var(--blue-200);
-      color: var(--blue-200);
+   &:active {
+     background-color: var(--color-tab--active);
     }
+
+  &.is-active {
+     background-color: transparent;
+     border-bottom-color: var(--borderColor-tab--active);
+     box-shadow: none;
+     font-weight: bold;
+     opacity: 1;
   }
 
   :--fullscreen & { font-size: .9rem; }
 }
+
